Fixes multiples errors that prevent the app to be executed. Changed some folder names.